DDM Konstruktor ausgeräumt